Change npm dev script

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "dev": "node --watch index.js"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
